jpackage build and CI